2003-11-13  Jakub Jelinek  <jakub@redhat.com>

	* posix/regcomp.c (optimize_utf8): Optimize even if SIMPLE_BRACKET
	with no bits set for >= 0x80 chars is seen.
	* posix/bug-regex20.c (tests): Add new tests.  Expect [ABC] to be
	optimized.
	(main): Run all tests with RE_ICASE as well.

2003-11-13  Ulrich Drepper  <drepper@redhat.com>

	* posix/Makefile: Add rules to build and run tst-rxspencer.
	(distribute): Add rxspencer/tests and rxspencer/COPYRIGHT.
	* posix/tst-rxspencer.c: New file.
	* posix/rxspencer/tests: New file.
	* posix/rxspencer/COPYRIGHT: New file.
	Patch mostly by Jakub Jelinek.

	* posix/regcomp.c (parse_bracket_exp): Don't check for range if
	this is no option given the first token.

	* posix/regcomp.c (parse_bracket_exp): Fix test for EOS after
	hyphen in range expression.  Return EBRACK in this case.

	* posix/regcomp.c (parse_bracket_element): Reject hyphens unless
	we expect them or it's the last element in the bracket expression.
	Indicated by new parameter.  Adjust all callers.

	* posix/runtests.c (run_a_test): If regcomp failed, reset last_pattern.
	Prettier error messages.

	* posix/regcomp.c (parse_dup_op): Fail with REG_BADBR is first
	number in {,} expression is larger.

2003-11-13  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/kernel-features.h (__ASSUME_TGKILL):
	Define appropriately for x86_64.
	(__ASSUME_UTIMES): Likewise.
	(__ASSUME_CLONE_THREAD_FLAGS): Likewise.

	* sysdeps/x86_64/fpu/s_ceill.S: New file.

2003-11-13  Ulrich Drepper  <drepper@redhat.com>

	* posix/regcomp.c (parse_expression): In BRE consecutive
	duplications are not allowed.

2003-11-12  Ulrich Drepper  <drepper@redhat.com>

	* posix/regcomp.c (parse_bracket_exp): If end of expression is
	seen, return EBRACK error, not BADPAT.

	* posix/regcomp.c (parse_expression): If token is OP_OPEN_DUP_NUM
	and RE_CONTEXT_INVALID_DUP syntax flag is set, fail.
	* posix/regex.h (RE_CONTEXT_INVALUD_OPS): New macro.
	(RE_SYNTAX_POSIX_BASIC): Use RE_CONTEXT_INVALUD_OPS.