@@ -384,7 +384,7 @@ main (int argc, char **argv)
       {NULL,	0,		NULL,		0 }
     };
 
-  while (getopt_long (argc, argv, "u", options, NULL) >= 0);
+  while (getopt_long (argc, argv, "", options, NULL) >= 0);
 
   if (optind + 1 != argc)
     {
