@@ -1,3 +1,9 @@
+2003-11-04  Ulrich Drepper  <drepper@redhat.com>
+
+	* sysdeps/unix/sysv/linux/ifaddrs.c: Make sure it's the kernel who
+	sends the netlink data.
+	* sysdeps/unix/sysv/linux/check_pf.c: Likewise.
+
 2003-11-13  Jakub Jelinek  <jakub@redhat.com>
 
 	* posix/regcomp.c (optimize_utf8): Optimize even if SIMPLE_BRACKET
